# secs_lib

./: .clangd  .gitignore  CMakeLists.txt  README.md  gcovr.cfg
benchmarks/: CMakeLists.txt  README.md  bench_core_buffer.cpp  bench_hsms_message.cpp  bench_main.hpp  bench_secs1_block.cpp  bench_secs2_codec.cpp  bench_sml_runtime.cpp
c_dump/BSP_App/Linux_BSP/Timer_bsp/: timer_bsp.h
c_dump/BSP_App/Linux_BSP/serial_bsp/: serial_bsp.h
c_dump/Secs_App/: secs_I.c  secs_I.h  secs_II.c  secs_II.h  secs_app.c  secs_app.h  secs_bsp.c  secs_bsp.h  secs_struct.h
c_dump/TVOC_Secs_App/: tvoc_secs_app.c  tvoc_secs_app.h
cmake/: AsioStandalone.cmake  SpdlogHeaderOnly.cmake  secsConfig.cmake.in
cmake/Modules/: CodeCoverage.cmake
docs/: project-review-2026-01-11.md  sample.sml
docs/architecture/: 00-overview.md  01-core-module.md  02-secs-ii-module.md  03-hsms-module.md  04-secs1-module.md  05-protocol-module.md  06-sml-module.md  07-c-api-module.md  08-utils-module.md  09-smlx-extension.md
docs/docs_summary/: SECS-I标准要点总结.md  SECS_Technical_Reference.md  SEMI_E05_0200A_要点总结.md  SEMI_E37_总结.md
docs/integration/: tvoc_code-cmake-integration.md  tvoc_code-cmake.patch
docs/secs_lib_audit/: comprehensive-code-review.md  detailed-report.md  dev-plan.md  executive-summary.md  fix-roadmap.md  hsms-interop-analysis.md  secs1-compat-fixes.md  secsii-resource-safety.md  test-coverage-gaps.md
docs/secs_lib_fixes/: dev-plan.md
docs/sml_sample/: sample.sml
examples/: CMakeLists.txt  README.md  c_api_hsms_client.c  c_api_hsms_server.c  c_api_protocol_client.c  c_api_protocol_loopback.c  c_api_protocol_server.c  c_api_secs2_simple.c  hsms_client.cpp  hsms_frame_builder_visual.cpp  hsms_hex_dump.cpp  hsms_pipe_client.cpp  hsms_pipe_server.cpp  hsms_server.cpp  hsms_sml_peer.cpp  protocol_custom_reply_example.cpp  secs1_loopback.cpp  secs1_serial_client.cpp  secs1_serial_link_posix.hpp  secs1_serial_server.cpp  secs1_sml_peer.cpp  secs2_simple.cpp  smlx_active_send_example.cpp  typed_handler_example.cpp  utils_dump_example.cpp  vendor_messages.hpp
include/secs/: c_api.h
include/secs/core/: buffer.hpp  common.hpp  error.hpp  event.hpp  log.hpp
include/secs/hsms/: connection.hpp  message.hpp  session.hpp  timer.hpp
include/secs/ii/: codec.hpp  item.hpp  types.hpp
include/secs/messages/: s1.hpp  s2.hpp  standard.hpp
include/secs/protocol/: router.hpp  session.hpp  system_bytes.hpp  typed_handler.hpp
include/secs/secs1/: block.hpp  link.hpp  posix_serial_link.hpp  serial_port_link.hpp  state_machine.hpp  timer.hpp
include/secs/sml/: ast.hpp  lexer.hpp  parser.hpp  render.hpp  runtime.hpp  token.hpp
include/secs/utils/: hex.hpp  hsms_dump.hpp  ii_helpers.hpp  item_dump.hpp  protocol_helpers.hpp  secs1_dump.hpp
integration_tests/: CMakeLists.txt  README.md
integration_tests/hsms/: cpp_hsms_client.cpp  cpp_hsms_server.cpp  run_hsms_integration.sh  test_hsms_pipe_with_secs4net.cpp  test_hsms_tcp_extended_with_secs4net.cpp  test_hsms_tcp_with_secs4net.cpp
integration_tests/hsms/dotnet_peer/: HsmsPeer.csproj  Program.cs
integration_tests/secs1/: test_secs1_pty.cpp
src/: c_api.cpp
src/core/: buffer.cpp  error.cpp  event.cpp  log.cpp
src/hsms/: connection.cpp  message.cpp  session.cpp  timer.cpp
src/ii/: codec.cpp  item.cpp
src/protocol/: router.cpp  session.cpp  system_bytes.cpp
src/secs1/: block.cpp  link.cpp  state_machine.cpp  timer.cpp
src/sml/: lexer.cpp  parser.cpp  render.cpp  runtime.cpp
src/utils/: hex.cpp  hsms_dump.cpp  ii_helpers.cpp  item_dump.cpp  secs1_dump.cpp
tests/: CMakeLists.txt  test_c_api.c  test_c_dump_secs1_block_compat.cpp  test_c_dump_secsii_compat.cpp  test_core_buffer.cpp  test_core_error.cpp  test_core_event.cpp  test_core_log.cpp  test_hsms_message.cpp  test_hsms_pipe_examples.cpp  test_hsms_transport.cpp  test_main.hpp  test_protocol_session.cpp  test_secs1_framing.cpp  test_secs2_codec.cpp  test_sml_parser.cpp  test_sml_runtime.cpp  test_standard_messages.cpp  test_typed_handler.cpp  test_utils_dump.cpp  test_utils_helpers.cpp
